--- a/style.scss
+++ b/style.scss
@@ -12,19 +12,20 @@ body{
         display: flex;
         justify-content: space-between;
         align-items: center;
-        max-height: 76px;
+        max-height: 65px;
         ul{
             display: flex;
             justify-content: center;
             align-items: center;
-            column-gap: 16px;
+            column-gap: 24px;
             #logo{
-                height: 80px;
+                height: 70px;
             }
             a{
                 color: white;
                 text-decoration: none;
                 font-weight: 600;
+                height: 100%;
             }
             li{
                 list-style: none;
@@ -40,6 +41,7 @@ body{
             align-items: center;
             justify-content: center;
             column-gap: 8px;
+            cursor: pointer;
             img{
                 border-radius: 50%;
                 background-color: gray;
@@ -48,7 +50,7 @@ body{
         }
     }
     .sub-header{
-        min-height: 86px;
+        min-height: 75px;
         background-color:rgb(35, 35, 35) ;
         width: 100%;
         display: flex;
@@ -94,11 +96,18 @@ body{
             border: none;
             padding: 16px;
             color: white;
+            font-size: 16px;
             border: 1px solid white;
             border-radius:200px;
-            width: 250px;
+            width: 280px;
+            height: 8px;
+            outline:none;
             &::placeholder{
                 color: rgb(169, 169, 169);
+                font-size: 16px;
+            }
+            &:hover{
+                background-color:rgb(52, 52, 52);
             }
 
         }
@@ -137,4 +146,48 @@ body{
         }
     }
 }
+}
+section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #030303;
+    position: relative;
+    user-select: none;
+    button{
+        position: relative;
+        position: absolute;
+        width: 180px;
+        bottom: 18px;
+        padding: 12px;    
+        background-color: transparent;
+        color: orange;
+        font-size: 20px;
+        font-weight: 800; 
+        border: none;
+        border-bottom: 2px solid orange;   
+        transition: 0.4s all ease-out;
+        cursor: pointer;  
+        &::before{
+            content: "";
+            width: 100%;
+            height: 0%;
+            left: 0 ;
+            background-color: orange;
+            transition: 0.5s all;
+            position: absolute;
+            bottom: 0;
+            border: none;
+        }        
+        &:hover{
+            color: white;
+            border-radius: 200px;
+        }    
+        &:hover::before{
+            border-radius: 200px;
+            height: 100%;
+            color: white;
+        }    
+                                                                                                  
+    }
 }
