--- a/style.scss
+++ b/style.scss
@@ -12,12 +12,15 @@ body{
     align-items: center;
     flex-direction: column;
     header{
-        width: 95%;
+        width: 100%;
         display: flex;
         justify-content: space-between;
         align-items: center;
         max-height: 65px;
-        background-color: #0a0a0a;
+        background-color: rgba(10, 10, 10,0.7);
+        position: fixed;
+        top: 0;
+        z-index: 1000000;
         ul{
             display: flex;
             justify-content: center;
@@ -46,6 +49,7 @@ body{
             align-items: center;
             justify-content: center;
             column-gap: 8px;
+            margin-right: 12px;
             cursor: pointer;
             img{
                 border-radius: 50%;
@@ -56,11 +60,16 @@ body{
     }
     .sub-header{
         min-height: 75px;
-        background-color:rgb(35, 35, 35) ;
+        background-color:rgb(35, 35, 35,) ;
         width: 100%;
         display: flex;
         justify-content: space-around;
         align-items: center;
+        position: fixed;
+        top: 65px;
+        z-index: 1000000;
+        transform: translateY(0);
+        transition: all 0.3s ease-in-out;
         ul{
             height: 100%;
             display: flex;
@@ -160,6 +169,9 @@ section{
     position: relative;
     user-select: none;
     width: 100%;
+    img{
+        width: 100%;
+    }
     button{
         position: relative;
         position: absolute;
@@ -202,7 +214,7 @@ section{
 main{
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
     flex-direction: column;
     h2{
         text-align: start;
@@ -242,13 +254,14 @@ main{
             cursor: pointer;
         }
     }
-    .slider-mmo{
+    .slider-mmo, .slider-fps , .slider-btl{
         height: 400px;
-        width: 90%;
+        width: 96%;
         display: grid;
         align-items: center;
         grid-auto-flow: column;
         grid-template-rows: 1fr;
+        position: relative;
         grid-auto-columns: minmax(200px, 1fr);
         gap: 14px;
         overflow-x: auto;
@@ -256,6 +269,7 @@ main{
         &::-webkit-scrollbar{
             display: none;
         }
+
     }
 }
 .space{
@@ -337,4 +351,105 @@ main{
     scale: 1;
     filter: blur(0);
     transform: translateY(0%);
+}
+.fakeheader{
+    height: 140px;
+    width: 100%;
+}
+
+#header.hidden {
+    transform: translateY(-100%);
+}
+#forward{
+    position: absolute;
+    z-index: 4325235;
+    right:  16px;
+    background-color: rgba(10, 10, 10,0.7);
+    border: 1px solid orange;
+    border-radius: 50%;
+    padding: 12px;
+    cursor: pointer;
+    width: 60px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 50%;
+    transform: translateY(-50%);
+}
+#backward{
+    position: absolute;
+    z-index: 4325235;
+    left:  16px;
+    background-color: rgba(10, 10, 10,0.7);
+    border: 1px solid orange;
+    border-radius: 50%;
+    padding: 12px;
+    cursor: pointer;
+    width: 60px;
+    height: 60px;
+    transform: rotate(180deg);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+
+.hero{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+
+    .principale{
+        width: 85%;
+        height: 390px;
+    }
+    &::after{
+        content: "";
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        background: linear-gradient(to top ,#0a0a0a 20%, rgba(0, 0, 0, 0.3) 50%, transparent);
+        border-radius: 10px;
+        z-index: 200;
+        top: 0;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+    .z3antot{
+        position: absolute;
+        bottom: 0;
+        display: flex;
+        z-index: 1324;
+        column-gap: 24px;
+
+        .small{
+            height: 142px;
+            width: 260px;
+            border-radius: 4px  ;
+            transition: all 0.5s;
+            -webkit-box-reflect: below 1px linear-gradient(transparent,transparent,#0004);
+            cursor: pointer;
+            &:hover{
+                scale: 1.1;
+            }
+        }
+    }
+}
+.forum{
+    margin-top: 120px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    img{
+        width: 35px;
+        height: 35px;
+    }
+    .message{
+        width: 80%;
+    }
 }
