--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 body {
   margin: 0;
   padding: 0;
@@ -179,8 +178,21 @@ section {
           user-select: none;
   width: 100%;
 }
-section img {
+section::after {
+  content: "";
   width: 100%;
+  height: 100%;
+  position: absolute;
+  background: linear-gradient(to top, #0a0a0a 6%, rgba(0, 0, 0, 0.3) 20%, transparent), linear-gradient(to right, #0a0a0a 9%, rgba(0, 0, 0, 0.3) 22%, transparent);
+  border-radius: 10px;
+  z-index: 200;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+section img {
+  width: 95%;
+  height: 600px;
 }
 section button {
   position: relative;
@@ -195,8 +207,8 @@ section button {
   border: none;
   border-bottom: 2px solid orange;
   transition: 0.3s all ease-in-out;
+  z-index: 1234234;
   cursor: pointer;
-  z-index: 1;
 }
 section button::before {
   content: "";
@@ -274,7 +286,7 @@ main .slider-mmo, main .slider-fps, main .slider-btl {
   grid-auto-columns: min-content;
   gap: 14px;
   overflow-x: auto;
-  overflow-y: visible;
+  overflow-y: hidden;
 }
 main .slider-mmo::-webkit-scrollbar, main .slider-fps::-webkit-scrollbar, main .slider-btl::-webkit-scrollbar {
   display: none;
@@ -417,54 +429,111 @@ main .slider-mmo::-webkit-scrollbar, main .slider-fps::-webkit-scrollbar, main .
   position: relative;
 }
 .hero .principale {
-  width: 85%;
-  height: 390px;
+  width: 100%;
+  height: 330px;
 }
 .hero::after {
   content: "";
   width: 100%;
   height: 100%;
   position: absolute;
-  background: linear-gradient(to top, #0a0a0a 20%, rgba(0, 0, 0, 0.3) 50%, transparent);
+  background: linear-gradient(to right, #0a0a0a 10%, rgba(0, 0, 0, 0.3) 50%, transparent);
   border-radius: 10px;
   z-index: 200;
   top: 0;
   left: 50%;
   transform: translateX(-50%);
 }
-.hero .z3antot {
-  position: absolute;
-  bottom: 0;
+
+.z3antot {
   display: flex;
   z-index: 1324;
   -moz-column-gap: 24px;
        column-gap: 24px;
+  background-color: rgb(35, 35, 35);
+  width: 100%;
+  padding-top: 26px;
+  padding-bottom: 26px;
+  justify-content: center;
+  border-radius: 2px;
+  position: relative;
 }
-.hero .z3antot .small {
+.z3antot div {
+  max-width: 85%;
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-auto-flow: column;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  -moz-column-gap: 16px;
+       column-gap: 16px;
+  transition: transform 0.3s ease;
+  will-change: transform;
+}
+.z3antot .small {
   height: 142px;
   width: 260px;
-  border-radius: 4px;
+  border-radius: 2px;
   transition: all 0.5s;
-  -webkit-box-reflect: below 1px linear-gradient(transparent, transparent, rgba(0, 0, 0, 0.2666666667));
   cursor: pointer;
-}
-.hero .z3antot .small:hover {
-  scale: 1.1;
+  border: 6px solid rgb(84, 84, 84);
 }
 
-.forum {
-  margin-top: 120px;
-  width: 100%;
+.txt {
+  color: #F19E39;
+  scale: 1.2;
+}
+
+.addtolib {
+  background-color: transparent;
+  border: none;
+  transition: all 0.2s;
+  opacity: 0.6;
+}
+.addtolib img {
+  scale: 0.5;
+}
+.addtolib:hover {
+  opacity: 1;
+}
+
+#forwardd {
+  position: absolute;
+  z-index: 4325235;
+  right: 24px;
+  background-color: rgba(10, 10, 10, 0.7);
+  border: 1px solid orange;
+  border-radius: 50%;
+  padding: 12px;
+  cursor: pointer;
+  width: 60px;
+  height: 60px;
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
+  top: 50%;
+  transform: translateY(-50%);
 }
-.forum img {
-  width: 35px;
-  height: 35px;
-}
-.forum .message {
-  width: 80%;
-}/*# sourceMappingURL=style.css.map */
 
+#backwardd {
+  position: absolute;
+  z-index: 4325235;
+  left: 24px;
+  background-color: rgba(10, 10, 10, 0.7);
+  border: 1px solid orange;
+  border-radius: 50%;
+  padding: 12px;
+  cursor: pointer;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 50%;
+  transform: translateY(-50%) rotate(180deg) !important;
+}
+
+.hed {
+  position: absolute;
+  top: 30px;
+}/*# sourceMappingURL=style.css.map */
