--- a/style.scss
+++ b/style.scss
@@ -169,8 +169,22 @@ section{
     position: relative;
     user-select: none;
     width: 100%;
-    img{
+    &::after{
+        content: "";
         width: 100%;
+        height: 100%;
+        position: absolute;
+        background: linear-gradient(to top ,#0a0a0a 6%, rgba(0, 0, 0, 0.3) 20%, transparent),linear-gradient(to right ,#0a0a0a 9%, rgba(0, 0, 0, 0.3) 22%, transparent);
+        border-radius: 10px;
+        z-index: 200;
+        top: 0;
+        left: 50%;
+        transform: translateX(-50%);
+
+    }
+    img{
+        width: 95%;
+        height: 600px;
     }
     button{
         position: relative;
@@ -185,8 +199,9 @@ section{
         border: none;
         border-bottom: 2px solid orange;   
         transition: 0.3s all ease-in-out;
+        z-index: 1234234;
         cursor: pointer;  
-        z-index: 1;
+
         &::before{
             content: "";
             height: 0%;
@@ -264,7 +279,7 @@ main{
         grid-auto-columns: min-content; 
         gap: 14px;
         overflow-x: auto;
-        overflow-y: visible;
+        overflow-y: hidden;
         &::-webkit-scrollbar{
             display: none;
         }
@@ -402,53 +417,111 @@ main{
     position: relative;
 
     .principale{
-        width: 85%;
-        height: 390px;
+        width: 100%;
+        height: 330px;
     }
     &::after{
-        content: "";
+        content: ""; 
         width: 100%;
         height: 100%;
         position: absolute;
-        background: linear-gradient(to top ,#0a0a0a 20%, rgba(0, 0, 0, 0.3) 50%, transparent);
+        background: linear-gradient(to right ,#0a0a0a 10%, rgba(0, 0, 0, 0.3) 50%, transparent);
         border-radius: 10px;
         z-index: 200;
         top: 0;
         left: 50%;
         transform: translateX(-50%);
     }
+}
     .z3antot{
-        position: absolute;
-        bottom: 0;
         display: flex;
         z-index: 1324;
         column-gap: 24px;
-
-        .small{
-            height: 142px;
-            width: 260px;
-            border-radius: 4px  ;
-            transition: all 0.5s;
-            -webkit-box-reflect: below 1px linear-gradient(transparent,transparent,#0004);
-            cursor: pointer;
-            &:hover{
-                scale: 1.1;
-            }
+        background-color:rgb(35, 35, 35,) ;
+        width: 100%;
+        padding-top: 26px;
+        padding-bottom: 26px;
+        justify-content: center;
+        border-radius: 2px;
+        position: relative;
+        div{
+            max-width: 85%;
+            display: grid;
+            grid-template-rows: 1fr;
+            grid-auto-flow: column;
+            overflow-x: hidden;
+            overflow-y: hidden;
+            column-gap: 16px;
+            transition: transform 0.3s ease;
+            will-change: transform;        
         }
+    .small{
+        height: 142px;
+        width: 260px;
+        border-radius: 2px  ;
+        transition: all 0.5s;
+        
+        // -webkit-box-reflect: below 1px linear-gradient(transparent,transparent,#0004);
+        cursor: pointer;
+        border:6px solid rgb(84, 84, 84);
+
     }
 }
-.forum{
-    margin-top: 120px;
-    width: 100%;
+
+.txt{
+    color: #F19E39;
+    scale: 1.2;
+
+}
+.addtolib{
+    background-color: transparent;
+    border: none;
+    transition: all 0.2s;
+    opacity: 0.6;
+    img{
+        scale: 0.5;
+    }
+    &:hover{
+        opacity: 1;
+    }
+}
+
+
+#forwardd{
+    position: absolute;
+    z-index: 4325235;
+    right:  24px;
+    background-color: rgba(10, 10, 10,0.7);
+    border: 1px solid orange;
+    border-radius: 50%;
+    padding: 12px;
+    cursor: pointer;
+    width: 60px;
+    height: 60px;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    img{
-        width: 35px;
-        height: 35px;
-    }
-    .message{
-        width: 80%;
-    }
+    top: 50%;
+    transform: translateY(-50%);
+}
+#backwardd{
+    position: absolute;
+    z-index: 4325235;
+    left:  24px;
+    background-color: rgba(10, 10, 10,0.7);
+    border: 1px solid orange;
+    border-radius: 50%;
+    padding: 12px;
+    cursor: pointer;
+    width: 60px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 50%;
+    transform: translateY(-50%) rotate(180deg) !important;
+}
+.hed{
+    position: absolute;
+    top: 30px;
 }
