--- a/style.scss
+++ b/style.scss
@@ -415,23 +415,23 @@ main{
     justify-content: center;
     align-items: center;
     position: relative;
+    background-color: rgba(25, 25, 25, 0.467);
 
     .principale{
-        width: 100%;
-        height: 330px;
+        height:500px ;  
     }
-    &::after{
-        content: ""; 
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        background: linear-gradient(to right ,#0a0a0a 10%, rgba(0, 0, 0, 0.3) 50%, transparent);
-        border-radius: 10px;
-        z-index: 200;
-        top: 0;
-        left: 50%;
-        transform: translateX(-50%);
-    }
+    // &::after{
+    //     content: ""; 
+    //     width: 100%;
+    //     height: 100%;
+    //     position: absolute;
+    //     background: linear-gradient(to right ,#0a0a0a 10%, rgba(0, 0, 0, 0.3) 50%, transparent);
+    //     border-radius: 10px;
+    //     z-index: 200;
+    //     top: 0;
+    //     left: 50%;
+    //     transform: translateX(-50%);
+    // }
 }
     .z3antot{
         display: flex;
@@ -524,4 +524,93 @@ main{
 .hed{
     position: absolute;
     top: 30px;
+}
+.chat{
+    width: 60%;
+    padding: 16px;
+    display:grid;
+    grid-template-columns: 1fr;
+    row-gap: 24px;
+    position: relative;
+    max-height: 622px!important;
+    overflow-y: scroll  ;  
+    grid-auto-rows: min-content; 
+    background-color: rgb(16, 16, 16);
+    border-radius: 8px;
+    .mine{
+        direction: rtl;
+        .ss {
+            margin-right: 8px!important;
+        }
+    }
+}
+.main-sec{
+    width: 100%;
+    display: flex;
+    flex-direction: row-reverse;
+    margin-top: 56px;
+    justify-content: space-around;
+}
+.current_infos{
+    width: 280px;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    background-color:rgb(16, 16, 16);
+    padding: 12px;
+    height: 622px;
+    border-radius: 14px;                                                                                                                                                                                                            
+    img{
+        width: 200px;
+        height: 300px;
+        border-radius: 14px;
+    }
+    h1{
+        width: 200px;
+        text-align: center;
+        font-size: 21px;
+        font-weight: 650;
+        color: rgb(219, 219, 219);
+        margin-bottom: 20px;
+        border-bottom: 1px solid rgb(219, 219, 219) ;
+    }
+    h2{
+        width: 200px;
+        text-align: start;
+        font-size: 14px;
+        font-weight: 650;
+        color: rgb(219, 219, 219);
+        margin-top: 4px;
+    }
+}
+#watchgameplay{
+    background-color: red;
+    border-radius: 4px;
+    padding: 6px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    column-gap: 4px;
+    height: 40px;
+    margin-top: 28px;
+    border: 1px solid rgb(219, 219, 219);
+    img{
+        width: 24px;
+    }
+}
+// #cvh{
+//     position: fixed;
+//     bottom: 0px;
+//     width: 100%;
+// }
+.messages{
+   height: 572px;
+}
+.rt{
+    margin-top: 24px;
+}
+.profile{
+    width: 26px;
+    height: 26px;
 }
