--- a/style.scss
+++ b/style.scss
@@ -174,8 +174,8 @@ section{
         width: 100%;
         height: 100%;
         position: absolute;
-        background: linear-gradient(to top ,#0a0a0a 6%, rgba(0, 0, 0, 0.3) 20%, transparent),linear-gradient(to right ,#0a0a0a 9%, rgba(0, 0, 0, 0.3) 22%, transparent);
-        border-radius: 10px;
+        // background: linear-gradient(to top ,#0a0a0a 6%, rgba(0, 0, 0, 0.3) 20%, transparent),linear-gradient(to right ,#0a0a0a 9%, rgba(0, 0, 0, 0.3) 22%, transparent);
+        // border-radius: 10px;
         z-index: 200;
         top: 0;
         left: 50%;
@@ -183,8 +183,7 @@ section{
 
     }
     img{
-        width: 95%;
-        height: 600px;
+      height: 650px;
     }
     button{
         position: relative;
